# DupDetector

./: .gitignore  AGENTS.md  GEMINI.md  README.md  check_imports.py  config.example.json  config.json  pyproject.toml  run_scan_log.txt
.claude/: settings.local.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_md5_index.py  0003_add_photohash_index.py  0003_add_timestamps_and_priority.py  0004_add_application_locks.py  0004_add_fk_indexes.py
docs/: duplicate_folders.md  utilities.md  windows.md
scripts/: deduplicate.py  inspect_timestamps.py  purge_duplicates.py  report_db_counts.py  run_scan_persist.py  scan_limited.py  test_scan_50.py
specs/001-media-organizer-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-media-organizer-cli/checklists/: requirements.md
specs/001-media-organizer-cli/contracts/: cli.md
src/dupdetector/: __init__.py  cli.py
src/dupdetector/lib/: database.py  db_lock.py  duplicate_folders.py  filetype.py  hashing.py
src/dupdetector/models/: __init__.py  application_lock.py  exif.py  file.py  filetag.py  tag.py
src/dupdetector/services/: repository.py
tests/: test_cli_duplicates.py  test_db_adapter.py  test_phash_clustering.py  test_repository.py  test_scan_duplicates.py  test_scan_persistence.py  test_smoke.py
